(fix) Spacing of social icons on mobile footer

--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -57,6 +57,10 @@ footer {
         display: flex;
         justify-content: space-evenly;
         padding: 1rem;
+
+        a:not(:last-child) {
+          margin-right: 0.2rem;
+        }
       }
     }
   }
